# wpguard-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: abilities-api-adapter.md  change-packet-v1.md  clients.md  demo-refusal-walkthrough.md
scripts/: demo_refusal_walkthrough.py
src/wpguard_mcp/: __init__.py  audit.py  auth.py  cloud.py  config.py  guard.py  notify.py  policy.py  recon_safety.py  server.py
src/wpguard_mcp/tools/: __init__.py  mutate.py  packets.py  recon.py
src/wpguard_mcp/transports/: __init__.py  companion_plugin.py  ssh_wpcli.py
tests/: conftest.py  test_audit.py  test_auth.py  test_cloud.py  test_config.py  test_config_layout.py  test_guard.py  test_guard_enumeration.py  test_locks.py  test_notify.py  test_policy.py  test_recon_safety.py  test_tools_flow.py
workspace/productization/: MASTER-PRODUCT-PLAN-2026-07-16.md  PRODUCTIZATION-BRIEF-2026-07-16.md
wp-plugin/: wpguard-companion.php
